--- a/SafeInvestment/index.html
+++ b/SafeInvestment/index.html
@@ -37,7 +37,7 @@
                         <ul>
                             <li><a href="">常见问题</a></li>
                             <li><a href="">立即登录</a></li>
-                            <li><a href="">免费注册</a></li>
+                            <li id="yellow"><a href="">免费注册</a></li>
                             <li><a href="">首页</a></li>
                         </ul>
                     </div>
@@ -61,15 +61,10 @@
                             </ul>
                         </div>
                     </div>
-                </div>    
-               
+                </div>                  
                 <div class="Image-Carousel wp clearfix">
                     <div id="photos" class="play">
-                        <img src=".\image\Image-Carousel-01.png"/>
-            <!--
-                        <img src=".\image\Image-Carousel-02.png"/>
-                        <img src=".\image\Image-Carousel-03.png"/>    
-            -->
+                        <img src=".\image\Registration-column.png"/>
                     </div>
                 </div>
                 <div class="main-header-mid wp clearfix">
@@ -150,14 +145,14 @@
                                     <td> </td>
                                 </tr>
                                 <tr class="clearfix">
-                                    <td class="td-float"><img src=".\image\jian-01.png" alt="">lifeng-10....</td>
+                                    <td class="td-float"><img src=".\image\jian-01.png" alt=""><p>lifeng-1011111111</p></td>
                                     <td><div class="radius-yellow">HR</div></td>
                                     <td>31000元</td>
                                     <td>10.28%</td>
                                     <td>89天</td>
                                     <td><img src=".\image\56%.png" alt=""></td>
                                     <td><p>56%</p></td>
-                                    <td><div class="radius-rad">投标</div></td>
+                                    <td><div class="radius-rad"><span>投标</span></div></td>
                                 </tr>
                                 <tr class="clearfix">
                                     <td class="td-float"><img src=".\image\jian-01.png" alt="">电子产品店资金周转</td>
@@ -167,7 +162,7 @@
                                     <td>12个月</td>
                                     <td><img src=".\image\100%.png" alt=""></td>
                                     <td><p>100%</p></td>
-                                    <td><div class="radius-gray">还款中</div></td>
+                                    <td><div class="radius-gray"><span>还款中</span></div></td>
                                 </tr>
                                 <tr class="clearfix">
                                     <td class="td-float"><img src=".\image\jian-01.png" alt="">房子装修需要申请贷款</td>
@@ -177,7 +172,7 @@
                                     <td>6个月</td>
                                     <td><img src=".\image\100%.png" alt=""></td>
                                     <td><p>100%</p></td>
-                                    <td><div class="radius-gray">还款中</div></td>
+                                    <td><div class="radius-gray"><span>还款中</span></div></td>
                                 </tr>
                                 <tr class="clearfix">
                                     <td class="td-float"><img src=".\image\jian-01.png" alt="">五金厂扩大经营</td>
@@ -187,7 +182,7 @@
                                     <td>6个月</td>
                                     <td><img src=".\image\100%.png" alt=""></td>
                                     <td><p>100%</p></td>
-                                    <td><div class="radius-gray">还款中</div></td>
+                                    <td><div class="radius-gray"><span>还款中</span></div></td>
                                 </tr>
                             </table>
                         </div>
